--- a/package.json
+++ b/package.json
@@ -13,18 +13,24 @@
     "@clerk/clerk-react": "^5.56.0",
     "@headlessui/react": "^2.2.9",
     "axios": "^1.13.2",
+    "cors": "^2.8.6",
+    "dotenv": "^17.3.1",
+    "express": "^5.2.1",
     "framer-motion": "^12.23.24",
     "jose": "^6.1.3",
     "lucide-react": "^0.554.0",
+    "mongoose": "^9.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.9.6",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "socket.io": "^4.8.3",
+    "socket.io-client": "^4.8.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@tailwindcss/vite": "^4.1.17",
-    "@types/node": "^24.10.0",
+    "@types/node": "^24.10.13",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.1.0",
